--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
     <script src="./Scripts/objects/Label.js"></script>
     <script src="./Scripts/objects/Button.js"></script>
     <script src="./Scripts/objects/Ocean.js"></script>
-    <script src="./Scripts/objects/Plane.js"></script>
-    <script src="./Scripts/objects/Island.js"></script>
-    <script src="./Scripts/objects/Cloud.js"></script>
+    <script src="./Scripts/objects/Agent.js"></script>
+    <script src="./Scripts/objects/Supply.js"></script>
+    <script src="./Scripts/objects/Enemy1.js"></script>
     <script src="./Scripts/objects/Bullet.js"></script>
 
     <!-- Scenes -->
